--- a/styles/header.css
+++ b/styles/header.css
@@ -21,4 +21,5 @@ div:nth-cjild(3) (
   padding-block: 14px;
   border: solid 1px var(--stroke-color);
   border-inline: none;
+  justify-content: space-between;
 }
