--- a/styles/global.css
+++ b/styles/global.css
@@ -23,8 +23,8 @@
 
 body {
   font: var(--text);
-  color: var(--text-color-primary)
-  background-color: var(--bg-color)
+  color: var(--text-color-primary);
+  background-color: var(--bg-color);
 }
 
 a {
@@ -33,7 +33,7 @@ a {
 }
 
 a:hover {
-  color: var(--brand-color-light)
+  color: var(--brand-color-light);
 }
 
 h1, h2, h3 {
@@ -52,4 +52,16 @@ img {
 
 main {
   margin-top: 40px;
+}
+
+.content-tag {
+  display: inline-block;
+  background-color: var(--brand-color-dark);
+  padding: 4px 8px;
+  border-radius: 4px;
+  font: 500 10px/1.2 var(--font-family);
+  text-transform: uppercase;
+  letter-spacing: 0.04em;
+  color: var(--text-color-primary);
+  box-shadow: 0px 4px 16px rgba(2, 6, 23, 0.25);
 }
