--- a/styles/sections.css
+++ b/styles/sections.css
@@ -21,10 +21,10 @@ section header {
 }
 
 #featured {
+  grid-area: featured;
   img {
     height: 100%;
     object-fit: cover;
-    border-radius: 4px;
   }
 
 
@@ -63,7 +63,8 @@ section header {
 }
 
 #weekly {
- 
+ grid-area: weekly;
+
  &>div {
   grid-template-columns: repeat(4, 292px)
  }
@@ -85,5 +86,35 @@ section header {
       margin-top: 8px;
       font-weight: 800;
     }
+  }
+}
+
+#ai {
+  grid-area: ai;
+  img {
+    width: 176px;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+  }
+
+h3 {
+  margin-block: 8px 4px;
+}
+}
+
+aside {
+  grid-area: aside;
+}
+
+#more {
+  margin-top: 32px;
+ 
+  h3 {
+    margin-top: 8px;
+  }
+  img {
+   width: 72px;
+   aspect-ratio: 1/1;
+   object-fit: cover;
   }
 }
